build: 升级依赖
- spring-boot-starter-parent>3.1.3
- spring-cloud-dependencies.version>2022.0.4
- seata.version>1.7.1
- druid.version>1.2.19
- mybatis.version>3.5.13
- mybatis-spring.version>2.1.1
- mybatis-plus.version>3.5.3.2
- mybatis-plus-generator.version>4.1.3
- tencentcloud-sdk-java.version>3.1.831
- aliyun-dysmsapi.version>2.0.23
- aliyun-sdk-oss.version>3.16.0